Save/Update files [ci skip]

--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1289,7 +1289,7 @@
  EVTOPTA5032:0 "海軍技術に投資する。"
  EVTOPTB5032:0 "既存の海軍を改善する。"
  EVTNAME5037:0 "農業革命"
- EVTDESC5037:1 "我々は、[province_in_question.GetName]において、大規模農園、灌漑および土地所有組織のための新しい農法を導入することにより、農業生産を増加させ、それによって、国家への高い税収をもたらした。"
+ EVTDESC5037:1 "我々は[province_in_question.GetName]において、大規模農園や灌漑や土地所有組織などの新しい農法を導入することにより、農業生産の増加に成功し、それによって行政に高い税収をもたらした。"
  EVTOPTA5037:0 "大規模な軍隊に投資する。"
  EVTOPTB5037:0 "さらに増税する。"
  EVTOPTC5037:1 "製造業は利益になる！"
@@ -4469,7 +4469,7 @@
  ideagroups.1929.d:0 "狩猟場で私たち国民が崇高な訓練を受けることで、経験豊富な兵士を常に多く抱えてきました。祈りの鳥を手なずけることで、一人の若者が同輩全員から抜きん出て、将軍に任命されました。"
  ideagroups.1929.a:0 "幸運を祈る。"
  ideagroups.1930.t:0 "白月"
- ideagroups.1930.d:0 "白き月が空に現れ、その幽かな境界線から光が注がれている。[Root.Adm_Advisor.GetName]はこの現象を軽んじるべきでは進言し、国中から人々が集まってこの珍しい現象を祝う宴が開かれ、月の淡い輝きを堪能している。"
+ ideagroups.1930.d:0 "白き月が空に現れ、その幽かな縁から光が注がれている。[Root.Adm_Advisor.GetName]はこの現象を軽んじることの危うさを警鐘した。国中から人々が集まってこの珍しい現象を祝う宴が開かれ、月の淡い輝きを堪能している。"
  ideagroups.1930.a:0 "素晴らしい！"
  ideagroups.1931.t:0 "州の手懐け"
  ideagroups.1931.d:0 "遊牧民を近づけさせることは、ほとんどの国が避けたがっていることです。私達の獰猛さは属国間でよく知られていて、私たちを喜ばせたいという気持ちは今やほとんど絶対的なものですー少なくとも自身の一家を守りたいという気持ちがあります。"
