--- a/source/localisation/winds_of_change_l_english.yml
+++ b/source/localisation/winds_of_change_l_english.yml
@@ -215,7 +215,7 @@
  merchant_aristocracy_reform_desc:1 "商業を目的とする国の多くは、より共和制に近い政治を行う傾向がある。しかしゴートの支配者はクリミアの領有権を掌握したコムネノス朝の商人であり、君主制に近い性格の統治を行っていた。"
  gothic_monarchy_reform:0 "ゴート族の君主制"
  gothic_monarchy_reform_desc:0 "ゴート君主制は商人的な国家の性格を捨てることで、より軍国主義的な性格に重点を置き、地政学的な要求を世界に強制するために、世界中から傭兵を集めることを選択する。"
- russian_mercenary_guard_reform:0 "ロシア人の守備傭兵"
+ russian_mercenary_guard_reform:0 "ロシア傭兵警備隊"
  russian_mercenary_guard_reform_desc:0 "ロシアは我々の緊密な同盟国であり、我々の軍隊を強化するために手を差し伸べてくれた。これらの兵士たちは現在、我が国の衛兵として働いている。"
  flavor_feo.1.t:0 "ガブラス家からの依頼"
  flavor_feo.1.d:0 "テオドロのガブラスは我々が彼らの臣下になれば我々を保護すると申し出てきた。"
@@ -246,8 +246,8 @@
  flavor_feo.6.a:0 "私達はゴート人なので、タタール人は貴重な戦士となるだろう。"
  flavor_feo.6.b:0 "タタール人はステップに属しており、私たちの仲間ではありません。"
  flavor_feo.9.t:0 "クレムリンの頂点"
- flavor_feo.9.d:0 "With complete control over the Rus, much of our aristocracy now calls us 'Tsars', the rulers of Russia. The Kremlin is fully secured, further consolidating our gains in case some may doubt our claim. Now all that is left is for us to decide how to rule. Shall we maintain our status as rulers of [Root.GetName], or shall we rule as a dual monarchy?"
- flavor_feo.9.a:1 "ロシアは[Root.GetName]の一部となるだろう。"
+ flavor_feo.9.d:0 "ルーシを完全に掌握したことで、貴族の多くは今や我々のことを「ツァーリ」、すなわちロシアの支配者と呼んでいる。我々の主張を疑う者が出現することに備え、クレムリンを完全に確保し、我々の利益をさらに強固にしている。あとは、どのように統治するかを決めるだけだ。[Root.GetName]の統治者としての地位を維持すべきなのか、それとも二重君主制として統治するべきなのか？"
+ flavor_feo.9.a:1 "ルーシは[Root.GetName]の一部となるだろう。"
  flavor_feo.9.b:0 "我々はガブラス家とホブラス家の両方に成るだろう。"
  flavor_feo.9.c:0 "地域の人々の力と回復力を活用しよう。"
  GOTHIA:0 "ゴート"
@@ -718,17 +718,17 @@
  flavor_ormoma.1.a:0 "沿岸地域の開発に注力せよ"
  flavor_ormoma.1.b:0 "内陸部の開発に注力せよ"
  flavor_ormoma.2.t:0 "商人の強化"
- flavor_ormoma.2.d:0 "The merchants within our nation have always been divided in terms of interest and ideology. Some wish to follow the traditional ways, securing trade through buying lands and assets overseas. Some wish to construct merchant fleets, buying and selling goods en masse. The rest though are comfortable with how they conduct trade, and simply wish to use their influence to help us with diplomatic matters."
+ flavor_ormoma.2.d:0 "自国の商人たちは、利害や思想の点で常に分裂している。ある者は伝統的なやり方を踏襲し、海外の土地や資産を購入して貿易を確保しようとする。ある者は商船団を作り、大量に商品を売買することを望む。しかし、それ以外の者たちは自分たちの貿易のやり方に満足しており、外交問題において単に自分たちの影響力を利用したいと望んでいる。"
  flavor_ormoma.2.a:0 "我々の在外商人に対する直接的な支援が役に立つでしょう。"
- flavor_ormoma.2.b:0 "A bigger merchant fleet will help us dominate overseas trade."
- flavor_ormoma.2.c:0 "Trade is but an extension of diplomacy."
+ flavor_ormoma.2.b:0 "商船団が大きいほど、海外貿易を支配するのに役立つでしょう。"
+ flavor_ormoma.2.c:0 "貿易とは外交の延長にすぎない。"
  flavor_ormoma.3.t:0 "ザンジバルのスルタン"
- flavor_ormoma.3.d:0 "With the fall of the city of Kilwa, [Root.GetName] is now in control of the Zanzibar region. The local populace has submitted to our rule. All that is left now is to declare ourselves as the Sultans of Zanzibar."
+ flavor_ormoma.3.d:0 "キルワ市の陥落により、[Root.GetName]は現在ザンジバル地域を支配している。地元住民は我々の支配に服従している。あとはザンジバルのスルタンであると宣言するだけだ。"
  flavor_ormoma.3.a:0 "我々は今やオマーンとザンジバルの支配者である。"
  flavor_ormoma.4.t:0 "マスカットの都"
- flavor_ormoma.4.d:0 "Masqat is perhaps the most vital port in Oman. Always in competition with Hormuz, it saw great prosperity in the past. Its influence has been reduced to insignificant over time though. We can choose to rebuild this once great Arabian port, or instead focus on Hormuz itself."
+ flavor_ormoma.4.d:0 "マスカットはおそらくオマーンで最も重要な港である。ホルムズとは常に競合関係にあり、過去には大きな繁栄を見せていた。しかし、その影響力は時間の経過とともに取るに足らないものにまで低下している。かつてはアラビアの偉大な港であったこの港を再建するか、それともホルムズそのものに注力するかを選択することができる。"
  flavor_ormoma.4.a:0 "ホルムズは最良の港だ。"
- flavor_ormoma.4.b:0 "Masqat shall be brought to even greater glory."
+ flavor_ormoma.4.b:0 "マスカットにはさらに大きな栄光がもたらされるだろう。"
  flavor_ormoma.5.t:0 "東アジア会社"
  flavor_ormoma.5.d:0 "アラビアの商人たちの多くが、異国の地で商品を売りたいと願い、故郷から船出した。多くのエキゾチックな富の宝庫である中国の地は、この広大な領域に商品を売り買いしようとする商人たちで溢れかえっている。彼らは自らを「東アジア会社」と呼び、今や中国に影響力を持っている。"
  flavor_ormoma.5.a:0 "商人たちは新たな港に到着するだろう！"
@@ -1655,9 +1655,9 @@
  flavor_ven.45.t:0 "ドゥカーレ宮殿"
  flavor_ven.45.d:0 "ヴェネツィアのドゥカーレ宮殿の建設は9世紀に始まり、その後何世紀も続きました。もともと要塞のような建物として構想されたこの宮殿は、時が経つにつれてヴェネツィアのゴシック建築の壮大な表現物へと発展しました。この驚異の建築物は、ヴェネツィア共和国の傑出した政治指導者であるドージェの邸宅であると同時に、様々な官庁や裁判所を収容するという、二重の目的を果たしました。\n\n16世紀まで、ドゥカーレ宮殿はかなりの改修と拡張が行われ、結果としてその壮大さは大幅に増加しました。最も注目すべき発展のひとつは大運河に面した象徴的なファサードの完成で、水路で近づいてくるすべての人に宮殿建築の壮麗さを示しました。この改修と拡張の期間は、ヴェネツィアの権力と権威の不朽の象徴としての宮殿の地位をより固めました。複雑な意匠と豪華な装飾が特徴の広間や部屋は、何世紀にも渡る政治活動の立会人であっただけでなく、この都市の豊かな歴史と世界的な舞台での継続的な重要性の不朽の証としても存在しました。"
  flavor_ven.45.a:0 "ドージェの権威を示す魅力的な象徴だ！"
- flavor_ven.46.t:0 "The Importance of Threatre in Early Modern Venice"
+ flavor_ven.46.t:0 "近世ヴェネツィアにおける演劇場の重要性"
  flavor_ven.46.d:0 "15世紀から16世紀にかけて、ヴェネツィアの演劇は活気に満ちた影響力のある文化現象であった。1637年にオープンしたサン・カッシアーノ劇場や、1580年にアンドレア・パラディオによって設計されたテアトロ・オリンピコなど、ヨーロッパ最古の常設劇場があった。これらの劇場では、演劇、オペラ、喜劇などさまざまな演劇が上演され、地元の人々や観光客を魅了した。海運と貿易の中心地であったヴェネツィアのユニークな位置は、ヨーロッパ各地からの芸術的なアイデアや影響の交換を可能にし、ヨーロッパの演劇とパフォーマンス芸術の歴史において極めて重要な役割を果たした、豊かで多様なエンターテイメントとしてのヴェネツィア演劇の発展に貢献しました。"
- flavor_ven.46.a:0 "Such elegance..."
+ flavor_ven.46.a:0 "かくも優雅な…"
  flavor_ven.47.t:0 "The Loredanian Academy"
  flavor_ven.47.d:0 "In [GetYear], the Academy, known as the 'Incogniti,' has drawn influential literary figures both within and beyond Venice who align with a libertine agenda and advocate for the city's political and cultural independence. Figures like Girolamo Brusoni and Ferrante Pallavicino, among others, are associated with this covert group, marked by its use of subterfuges like paradox and allegory to avoid criticism. Operating discreetly, members often employ secret language and publish anonymously, with their philosophy influenced by Trajano Boccalini, embracing Aristotelian naturalism from the University of Padua.\n This clandestine academy, despite facing censorship and finding its works on the Index, boldly challenges societal norms through satirical compositions and hybrid genres. Shaped by the ideologies of Machiavelli, Paolo Sarpi, and others, they critique tyranny in historical writings. Surprisingly, the Accademia degli Incogniti becomes a key force in advancing musical theatre in Venice, establishing the Teatro Novissimo."
  flavor_ven.47.a:0 "Let there be culture and light!"
