Save/Update files [ci skip]

--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -2912,7 +2912,7 @@
  flavor_tur.261.i:0 "ありえない！"
  flavor_tur.261.j:0 "諸君は既に望むものを全て持っているはずだ…"
  flavor_tur.262.t:0 "女人政治"
- flavor_tur.262.desc:1 "セルジューク朝がアナトリアを支配していた時代、女性貴族が政策や問題に関して絶大な権力を握っていた。しかし、これは「馬上より導く」という教義の出現とともに衰退し始めた。それ以前のオスマン帝国の政策には、真の後継者に対抗できないように、皇子たちとその母親に知事職を与えることが含まれていた。16世紀に入ると、こうした状況は一変した。\n\nスルタン・スレイマン1世が即位すると、いくつかの変化が訪れた。これらの変化によって、スルタンの母や妻たちは、行政や外交に関してほとんど無制限の権力を持つようになった。この「女性スルタン」は、公共事業、施設、国防の巨大な発展につながった。このような政策変更には、宰相や顧問といった帝国内の男性たちから絶大な批判が寄せられた。\n\nそこで疑問が生じた。ハレム内の女性たちに絶大な権力を与えることに価値はあるのか？と。"
+ flavor_tur.262.desc:1 "セルジューク朝がアナトリアを支配していた時代、女性貴族が政策や情勢に関して絶大な権力を握っていた。しかし、これは「馬上より導く」という教義の出現とともに衰退し始めた。それ以前のオスマン帝国の政策には、皇子たちとその母親に知事職を与えることが含まれており、王子たちが真の後継者に異議を唱えることができなかった。16世紀に入ると、こうした状況は一変した。\n\nスルタン・スレイマン1世が即位すると、いくつかの変化が訪れた。そのひとつが、帝国後宮のハレムを宮殿へ統合したことであった。これらの変化によって、スルタンの母や妻たちは、行政や外交に関してほぼ無制限の権限を持つようになった。この「女性スルタン国」は、公共事業、施設、国防の巨大な発展につながった。このような政策変更には、宰相や顧問といった帝国内の男性たちから絶大な批判が寄せられた。\n\nそこで疑問が生じた。ハレム内の女性たちに絶大な権力を与えることに価値はあるのか？と。"
  flavor_tur.262.a:0 "彼女たちはスルタンの右腕となるべきだ！"
  flavor_tur.262.b:0 "帝権を分割することはできない。"
  flavor_tur.262.b.tt:0 "ハレムの権力を制限し、将来の[Root.Monarch.GetTitle]たちを操作できないようにする。\n§Yハレムのイベントによる後継者は、ハレムに反対した場合、ゲーム終了までスキルが§R-§!されます。§!"
