Save/Update files [ci skip]

--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -874,7 +874,7 @@
  mansabdari_system_desc:0 "土地の支給には問題があった。この制度には、貴族たちが国家内国家を作ってしまう結果をもたらす危険があったのだ。これからは制度を厳格化し、貴族たちには土地そのものではなく、土地の徴税権だけを与えるようにしよう。そしてその特権も一時的なものとし、さらに帝国軍に兵士を派遣する義務を負わせよう。それ以外の業務は、皇帝のもとに残すべきだ。"
  control_of_the_ulema:0 "聖職者の統制"
  control_of_the_ulema_desc:0 "ムガルのウラマーは、国外の政治勢力に余りにも影響されやすい。最も影響力の強い者たちを帝国に集め、パーディシャーこそが最高権威だと認めさせよう。"
- mughal_ibadat_khana:0 "イバダット・カーナ－礼拝の家"
+ mughal_ibadat_khana:0 "イバダット・カーナ－信仰の館"
  mughal_ibadat_khana_desc:0 "信じる宗教、哲学に関わらず、内外の優れた学者たちをここに集め、彼らに人の生き方や信仰の在り方について議論させよう。"
  zabt_system:0 "ザブト制"
  zabt_system_desc:0 "この国の統治機構には、古い慣習が残り続けている。そのため、徴税などを行う機構の組織化が効率的な形でなされていない。一度すべての土地を没収して中央政府の直轄領とし、統治機構の再編を行おう。これで徴税の効率は飛躍的に向上するだろう。"
