--- a/extract/localisation/areas_regions_l_english.yml
+++ b/extract/localisation/areas_regions_l_english.yml
@@ -2779,9 +2779,9 @@
  baleares_area:0 "Baleares"
  baleares_area_name:0 "Baleares"
  baleares_area_adj:0 "Balearic"
- barbary_coast:0 "Barbary Coast"
  barbary_coast_area:0 "Barbary Coast"
- barbary_coast_adj:0 "Barbary"
+ barbary_coast_area_name:0 "Barbary Coast"
+ barbary_coast_area_adj:0 "Barbary"
  rio_grande_region:0 "Rio Grande"
  rio_grande_region_name:0 "Rio Grande"
  rio_grande_region_adj:0 "Rio Grande"
@@ -2841,4 +2841,4 @@
  costa_rica_area_adj:0 "Costa Rican"
  apacheria_area:0 "Apacheria"
  apacheria_area_adj:0 "Apacherian"
- apacheria_area_area:0 "Apacheria"
+ apacheria_area_name:0 "Apacheria"
