--- a/extract/localisation/kairis_soundtrack_part_3_l_english.yml
+++ b/extract/localisation/kairis_soundtrack_part_3_l_english.yml
@@ -1,15 +1,15 @@
 ﻿l_english:
-  CHANNEL_music_kairipart3: "Kairi's Soundtrack III"
-  blood_of_the_old_gods: "Blood of the Old Gods"
-  city_of_the_world_s_desire: "City of the World's Desire"
-  crossing_the_seas: "Crossing the Seas"
-  eastern_mists: "Eastern Mists"
-  fine_day_for_sacrifice: "Fine day for Sacrifice"
-  gaelic_summers: "Gaelic Summers"
-  hundred_years_war: "Hundred Years' War"
-  la_bataille_de_iberia: "Bataille pour l'Ibérie"
-  march_for_the_empire: "March for the Empire"
-  old_families: "Old Families"
-  prelude_s_march: "Prelude's March"
-  the_shogunate_will_fall: "The Shogunate will Fall"
-  the_siege_of_vienna: "The Siege of Vienna"
+ CHANNEL_music_kairipart3:0 "Kairi's Soundtrack III"
+ blood_of_the_old_gods:0 "Blood of the Old Gods"
+ city_of_the_world_s_desire:0 "City of the World's Desire"
+ crossing_the_seas:0 "Crossing the Seas"
+ eastern_mists:0 "Eastern Mists"
+ fine_day_for_sacrifice:0 "Fine day for Sacrifice"
+ gaelic_summers:0 "Gaelic Summers"
+ hundred_years_war:0 "Hundred Years' War"
+ la_bataille_de_iberia:0 "Bataille pour l'Ibérie"
+ march_for_the_empire:0 "March for the Empire"
+ old_families:0 "Old Families"
+ prelude_s_march:0 "Prelude's March"
+ the_shogunate_will_fall:0 "The Shogunate will Fall"
+ the_siege_of_vienna:0 "The Siege of Vienna"
