Save/Update files [ci skip]

--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -491,7 +491,7 @@
  CHINESE_UNIFICATION_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$中華覇権戦争"
  CELESTIAL_EMPIRE_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$の天命争奪戦争"
  FORCE_MIGRATION_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$強制移住戦争"
- IN_WARGOAL_COST:1 "戦争目標の一部であるため、$WHO|Y$に対して追加の£dip£コストは発生しません！"
+ IN_WARGOAL_COST:1 "戦争目標の一部であるため、$WHO|Y$に対して追加の£dip  コストは発生しません！"
  NOT_IN_WARGOAL_COST:1 "戦争目標の一部ではないため、$WHO|Y$に対して追加で§Y$COST$§!£dip  の外交力コストが発生します！"
  UNLAWFUL_TERRITORY_WARN:0 "§R不法な領土。皇帝が返還を要求してくる可能性があります。§!"
  UNLAWFUL_TERRITORY_WARN_DELAY:0 "この州は帝国の一部であり、あなたの中核州ではないため、領有した場合には不法な領土であると見なされます。"
@@ -861,7 +861,7 @@
  guarantee_neighbour_of_rival:0 "$TARGET$に独立保証している"
  took_province_from_rival:0 "$TARGET$の州を征服した"
  vassalized_rival:0 "$TARGET$を属国化した"
- rival_lost_province:0 "$TARGET$は、我々との戦争で州を失った。"
+ rival_lost_province:0 "$TARGET$は、我々との戦争で州を失った"
  lost_province_to_rival:0 "$TARGET$は我々の州を征服した"
  eclipsed_rival:0 "$TARGET$を凌駕した"
  declared_war_at_rival:0 "$TARGET$に宣戦布告した"
