--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -728,7 +728,7 @@
  mng_has_had_ashikaga_petitions_for_open_trade_event_tt:1 "将軍がイベント「§Y日中間の交易関係§!」にて選択肢「§Y中国商人との接触を許可せねば。§!」を選んだ"
  mng_conquest_japan_reward_tt:0 "§Y征服§!を通じて日本との交易関係を築く場合のミッション報酬："
  mng_diplomatic_reward_japan_tt:0 "\nもしくは、§Y外交的§!にミッションを完了した場合："
- mng_can_build_imperial_granary_tt:0 "\n[1816.GetName]に§Y工場§!がある状態でミッションを完了した場合、上記の報酬に「§Y帝国穀倉§!」が追加されます:\n州の交易品生産: §G +2§!"
+ mng_can_build_imperial_granary_tt:0 "\n[1816.GetName]に§Y工場§!がある状態でミッションを完了した場合、上記の報酬に「§Y帝国穀倉§!」が追加されます:\n州の交易品生産：§G +2§!"
  mng_improve_haijin_policy_reward_tt:1 "現行の§Y海禁政策§!を§Y改善§!した後にミッションを完了する場合、全§Y統治顧問§!は、1レベルごとに開発コスト§G-2%§!の効果を持つようになり、さらに§Y沿岸防御§!がある領有州すべてで以下を獲得します："
  mng_repeal_and_replace_reward_policy_tt:0 "\n現行の§Y海禁政策§!を§Y置き換え§!た後にミッションを完了する場合、全ての§Y外交顧問§!は、1レベルごとに交易効率§G+2%§!の効果を持つようになり、さらに以下を獲得します："
  every_province_yellow_river_suffers_tt:2 "§Y黄河§!沿いの開発度§Y15§!以上の領有州はすべて、開発度を失います"
@@ -2569,7 +2569,7 @@
  tur_most_humble_ottoman_ceo_desc:0 "自帝国が成長するにつれて、[Root.Capital.GetName]の重要性も増している。この都市は単に自領の中心であるだけでなく、世界の交易中心地でもある。その最大の受益者であることを確保せねばならない。"
  tur_issue_the_kannuname_title:0 "カーヌーン・ナーメの発布"
  tur_issue_the_kannuname_desc:0 "善良なるムスリムとして、自国の支配者は常にムハンマド（彼に平安あれ）が定めたシャーリアの教義に従ってきた。しかし、多くの臣民が異なる信仰を持っている。過去には、他の聖典信者は独自の裁判所を持つことが許されていたが、これにより複雑で取り扱いにくい裁判制度が生まれた。異なる信仰を持つすべての臣民にとって、信仰に関係なく法治の基礎となる法典を作成する時が来た。"
- tur_3_toh_tt:1 "異教寛容度が§Y3§!ある。"
+ tur_3_toh_tt:1 "異教徒の寛容度が§Y3§!ある。"
  tur_3_tot_tt:0 "真の信仰の寛容度が§Y3§!ある。"
  tur_3_the_tt:0 "異端の寛容度が§Y3§!ある。"
  tur_second_islamic_golden_age_title:0 "第二次イスラム黄金時代"
@@ -2989,7 +2989,7 @@
  flavor_tur.282.desc:2 "預言者ムハンマドの生涯は、常に偉大な文章の源である。そのような文章の一つは、もともとマムルーク朝スルタン・ベルクークの要求に応じてエルズルムのムスタファ・アル＝ダリールによって1388年に完成されたスィエリ・ネビーである。以来、非常に称賛されている作品であり、我らが[Root.Monarch.GetTitle][Root.Monarch.GetName]の知恵は、それを拡張することを決定し、本の新しい図版の複製を注文した。新版は有名な書道家ルフティ・アブドゥラによって描かれ、その仕上がりは確かに賞賛に値する。その豪華なページは、預言者の生涯をこれまでで最も美しく表現したものであり、スルタンの誇り高き所有物となるだろう。オスマン帝国に永遠に栄光のあらんことを！"
  flavor_tur.282.a:0 "大預言者のための名高い文学作品だ！"
  flavor_tur.283.t:0 "アブー・ハニーファの墓"
- flavor_tur.283.desc:1 "イマーム・アブー・ハニーファは、クーファのペルシャ人家庭に生まれたイスラム教スンニ派の神学者・法学者である。ハナフィー学派の創始者として広く知られる彼の遺体は、バグダードのモスクで永遠に大切にされてきた。今、われわれがこの壮大な都市を征服したことで、ハニーファの墓を修復するのか、それともダカットを節約して別の場所に配分するのかは、スルタンの決断にかかっている。"
+ flavor_tur.283.desc:1 "イマーム・アブー・ハニーファは、クーファのペルシャ人家庭に生まれたイスラム教スンナ派の神学者・法学者である。ハナフィー学派の創始者として広く知られる彼の遺体は、バグダードのモスクで永遠に大切にされてきた。今、われわれがこの壮大な都市を征服したことで、ハニーファの墓を修復するのか、それともダカットを節約して別の場所に配分するのかは、スルタンの決断にかかっている。"
  flavor_tur.283.a:0 "彼の墓を復興しその遺産を称えよう！"
  flavor_tur.283.b:0 "我々の金は別のことに使う方がいいだろう！"
  flavor_tur.284.t:0 "[Root.Monarch.GetName]の時代におけるイスラーム認識論"
@@ -3557,7 +3557,7 @@
  estate_nobles_expedition_rights:0 "[Root.GetNobilityName]の探検権"
  estate_nobles_expedition_rights_desc:0 "新大陸には多くのチャンスがある。そして我々の[Root.GetNobilityName]はそれをよく理解している。本国の世俗的な財産を気にすることなく、新大陸で独自の遠征を開始する権利を与えることで、人類が知る限り最も勇敢な征服者たちを採用することができるようになるのだ。"
  estate_maratha_development_of_marathi_lands:0 "マラーター発展の促進"
- estate_maratha_development_of_marathi_lands_desc:0 "[Root.GetMarathasName]は、我々の[Root.GovernmentName]内で影響力のあるカーストの1つである。彼らに国家の注目と資源を約束することで、我々に対する忠誠心を確保することができる。"
+ estate_maratha_development_of_marathi_lands_desc:0 "[Root.GetMarathasName]は、我々の[Root.GovernmentName]内で影響力のあるカーストの1つである。彼らに国家の配慮と財源を約束することで、我々に対する忠誠心を確保することができる。"
  estate_maratha_development_of_marathi_lands_gt:0 "領有する§Yシンハラ§!、§Yドラヴィダ§!および§Y西アーリア§!（非ラージャスターンかつ非マールワー）の州はすべて、以下のボーナスを得ます："
  estate_maratha_development_of_marathi_lands_rt:0 "補正「§Yマラーターの発展§!」が全州から取り除かれます。"
  estate_maratha_development_of_marathi_lands_mod:0 "マラーターの発展"
@@ -3571,7 +3571,7 @@
  estate_maratha_noble_promotion:0 "[Root.GetMarathasName]貴族の昇進"
  estate_maratha_noble_promotion_desc:0 "[Root.GetMarathasName]自身に貴族の家柄の仲間がいる。しかし、通常の[Root.GetNobilityOrFallbackName]との直接競争においては、[Root.GetMarathasName]が不利である。彼らの地位を昇進させることで、[Root.GetMarathasName]の忠誠を確保できるだろう。"
  estate_rajput_development_of_rajput_lands:0 "ラージャスターン発展の促進"
- estate_rajput_development_of_rajput_lands_desc:0 "[Root.GetRajputsName]は、我々の[Root.GovernmentName]内で影響力のあるカーストの1つである。彼らに国家の注目と資源を約束することで、我々に対する忠誠心を確保することができる。"
+ estate_rajput_development_of_rajput_lands_desc:0 "[Root.GetRajputsName]は、我々の[Root.GovernmentName]内で影響力のあるカーストの1つである。彼らに国家の配慮と財源を約束することで、我々に対する忠誠心を確保することができる。"
  estate_rajput_development_of_rajput_lands_gt:1 "領有する§Yラージャスターン§!、§Yマールワー§!、§Yヒンドゥスタン§!、§Y中央インド§!および§Y東アーリア§!（非シンハラ）の州はすべて、以下のボーナスを得ます："
  estate_rajput_development_of_rajput_lands_rt:0 "補正「§Yラージャスターンの発展§!」が全州から取り除かれます。"
  estate_rajput_development_of_rajput_lands_mod:0 "ラージャスターンの発展"
@@ -3656,7 +3656,7 @@
  estate_nomadic_tribes_ensure_tribal_loyalty:0 "[Root.GetTribesName]の忠誠の確保"
  estate_nomadic_tribes_ensure_tribal_loyalty_desc:0 "[Root.Monarch.GetTitle]の力はその臣民の忠誠心なしには存在し得ない。どれだけ犠牲を払おうとも、[Root.GetTribesName]の忠誠を確保せねばならない。"
  estate_nomadic_tribes_ensure_tribal_loyalty_gt:2 "§Y部族の継承危機§!イベントは、少なくとも合計で§Y12§!の君主力を持っている後継者については発生しなくなります。"
- estate_nomadic_tribes_ensure_tribal_loyalty_rt:1 "§Y部族の継承危機§!イベントは、後継者の君主力に関わるず発生するようになります。"
+ estate_nomadic_tribes_ensure_tribal_loyalty_rt:1 "§Y部族の継承危機§!イベントは、後継者の君主力に関わらず発生するようになります。"
  estate_nomadic_tribes_secured_succession:0 "継承の確保"
  estate_nomadic_tribes_secured_succession_desc:0 "[Root.GovernmentName]では、継承は力によって保障される。しかし悲しきかな、強さとは欺瞞に満ちたものであり、若きハーンになろうとする者たちは、その実力を証明する機会を得る前に殺されてきた。\n[Root.GetTribesName]は動揺するだろうが、継承は確実に行われなければならない。"
  estate_dhimmi_administrative_privileges:0 "[Root.GetDhimmiName]の自治"
@@ -5197,7 +5197,7 @@
  flavor_gbr.115.a:0 "新たな騎士団の幕開けだ。"
  flavor_gbr.115.b:0 "そんな騎士団など過去のままであるべきだ。"
  flavor_gbr.116.t:0 "イングランドの馬上槍試合"
- flavor_gbr.116.desc:0 "馬上槍試合は、何世紀にもわたってヨーロッパ全域で伝統となっていて、騎士たちが自身の戦闘能力を披露し、磨きをかけることができました。昨今、例えば傾斜の障害の導入といった革新によって馬上槍試合は改善され、より完全なものにされています。傾斜の障害の狙いは、衝突を防ぎ、試合時に両方の騎手が最適の角度に保つことです。また、鎧技術の向上も戦闘員の安全をさらに上げています。その結果、馬上槍試合は実際の戦争訓練よりもむしろより娯楽的で壮観なものになっています。しかし、これは以前よりも多くの者たちが参加できるようになったことも意味しています。"
+ flavor_gbr.116.desc:0 "馬上槍試合は、何世紀にもわたってヨーロッパ全域で伝統となっていて、騎士たちが自身の戦闘能力を披露し、磨きをかけることができました。昨今、例えばティルト隔壁の導入といった革新によって馬上槍試合は改良され、より完成度が高まっています。ティルトの目的は、正面衝突を防ぎ、槍合わせの時に双方の騎手の走行方向を最適に保つことです。また、鎧技術の向上も闘士の安全をさらに上げています。その結果、馬上槍試合は実際の戦争訓練というよりもむしろより娯楽や見世物的なものになっています。しかしそれは同時に、これまで以上に多くの人々が参加できるようになったことも意味しています。"
  flavor_gbr.116.a:0 "素晴らしい娯楽だ。"
  flavor_gbr.117.t:0 "名誉革命"
  flavor_gbr.117.desc:0 "カトリックであるにもかかわらず、ジェームズ2世は幅広い支持を受けてイングランド王、スコットランド王、アイルランド王になりましたが、彼の推定相続人がプロテスタントの娘メアリーであったため、それは短期的の合意だと見なされていました。彼女自身はオランダ共和国の事実上の統治者であるオラニエ公ウィレムと結婚しており、オランダ共和国自体はプロテスタントの国家でした。メアリーに取って代わる男子継承者の誕生はカトリック王朝の可能性を広げる扉を開き、数人のプロテスタント司祭の告発が多方面からの反カトリックの反対に拍車をかけました。\nこのことがジェームズの権威を傷つけ、イングランドの政治家連合はウィレムに軍事介入するよう招き入れ、プロテスタント信仰を保護させました。"
@@ -6457,7 +6457,7 @@
  flavor_ara.13.d:0 "ナイル川を通過する交易には、莫大な価値が含まれています。ナイル川を通過する商品の量を利用することは、想像を絶する利益をもたらすだけではなく、遠く離れた海岸から新商品を導入することにもなります。近年のデルタ地帯の征服は、インドやさらに向こうにまで広がる多くの事業を独占することにつながっています。"
  flavor_ara.13.a:0 "これは我々の国庫に良い影響を与えるだろう！"
  ara_claims_in_castile_tt:0 "\n @CAS カスティーリャが領有する土地に対して恒久的な請求権を獲得します\n"
- ara_if_cas_dip_tt:0 "\n@CAS が自国§Y従属国§!もしくは§Y同盟国§!の状態でミッションを完了した場合、§Y歴史的友好国§!を獲得します\n"
+ ara_if_cas_dip_tt:0 "\n@CAS が自国の§Y従属国§!もしくは§Y同盟国§!の状態でミッションを完了した場合、§Y歴史的友好国§!を獲得します\n"
  ara_had_remensa_war_event_tt:0 "イベント「§Y農民組合§!」が発生済み"
  ara_become_p_republic_tt:1 "\n§Y農民共和国§!を宣言します！\n"
  ara_iberian_struggle_modifier:0 "イベリアの闘争"
@@ -6582,7 +6582,7 @@
  pru_if_emperor_tt:1 "\n最後に、もし自身が現§Y皇帝§!である場合、開発度が§G25§!以上である非HRE州を征服するごとに、帝国の権威を§G1§!獲得します。"
  pru_spread_dev_tt:0 "\n§Y東プロイセン§!地域および§Y西プロイセン§!地域の全州で開発度をランダムで§G1§!獲得します。\n"
  pru_golden_era_20_unis_tt:0 "\n大学を§Y25§!以上持ってこのミッションを完了した場合、支配者の存命中、自身の黄金時代を消費することなく§Y黄金時代§!を経験することができます"
- until_its_sieged_desc:0 "ベルリン州を敵が占領もしくは征服するまで"
+ until_its_sieged_desc:0 "ベルリン州を敵軍が包囲もしくは征服するまで"
  estate_nobles_consolidated_noble_contracts:0 "貴族との契約強化"
  estate_nobles_consolidated_noble_contracts_desc:0 "貴族は戦時中において自国にとって不可欠な存在である。国境を前進させることに自軍を注力させたいならば、内地の平和を維持するために領内の有力な一族と提携せねばならない。"
  unlock_privilege_estate_nobles_consolidated_noble_contracts_tt:0 "\n貴族特権「§Y貴族との契約強化§!」を解禁"
