--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1142,7 +1142,7 @@
  flavor_rus.EVTOPTA3411:0 "この恐ろしい侮辱のかたきを討つ。"
  flavor_rus.EVTOPTB3411:0 "反乱を鎮圧するのに利用する。"
  flavor_rus.EVTNAME3413:0 "大蔵省改革と給餌制度の廃止"
- flavor_rus.EVTDESC3413:0 "最も重要なロシアの政府改革のいくつかがイヴァン4世によって制定された。イヴァンはイヴァン3世の業績の上に築き上げ、代官（注：皇帝の臣下時にのみ与えられる領土を有した軍人・文官）階級を君主制にさらに密接に結びつけた。彼はまた、直接自由にできる財務局を別に創設し、資金の流入と流出に一定の効率をもたらした。給与が農民の手から直接「そのまま」支払われていた地方行政の支払制度である給餌制度の廃止と、地方行政組織の是正が、君主制をより一層効率的かつ強力なものにした。ロシアにとって不幸なことに、これらの改革は、イヴァン4世の治世末期、犠牲の多い悲惨なリヴォニア戦争後の国家を破産しないようにしておくには十分ではなかった。"
+ flavor_rus.EVTDESC3413:0 "特筆すべきロシアの政府改革がイヴァン4世によっていくつも制定された。イヴァン4世はイヴァン3世の業績の上に築き上げ、代官（注：皇帝の臣下時にのみ与えられる領土を有した軍人・文官）階級を君主制とより密接にした。また、直接自由にできる財務局を別に創設し、資金の流入と流出に一定の効率をもたらした。給与が農民の手から直接「そのまま」支払われていた地方行政の支払制度である給餌制度の廃止と、地方行政組織の是正が、君主制をより一層効率的かつ強力なものにした。ロシアにとって不幸なことに、これらの改革は、イヴァン4世の治世末期、多大な犠牲を伴った悲惨なリヴォニア戦争後の国家が破産しない程のものではなかった。"
  flavor_rus.EVTOPTA3413:0 "大蔵省を改革し、給餌を廃止する。"
  flavor_rus.EVTOPTB3413:0 "大蔵省を改革するだけにする。"
  flavor_rus.EVTOPTC3413:0 "給餌を廃止するだけにする。"
@@ -2501,7 +2501,7 @@
  flavor_brapru.37.d:0 "多言語のユダヤ人の学者であり哲学者であったモーゼス・メンデルスゾーンは地味な生まれであった。もともと、彼はラビになることを意図していたが、宗教教育は彼を[berlin_province.GetCapitalName]に導き、代わりに出版された作品により、キリスト教徒とユダヤ人の間で高く評価された。ドイツ語とヘブライ語で書かれた彼の著作と出版物は、自身の家でさえ行われている開かれた議論と共に、[Root.Country.GetName]には見られない規模の人々の間で寛容の道を切り開いている。高い知性と深い思考の魅力的な人物である彼を、「ドイツのソクラテス」と呼んでいる者もいる。"
  flavor_brapru.37.a:0 "何と貴重な人物だ！"
  flavor_brapru.38.t:0 "ルピーンの土地の没収"
- flavor_brapru.38.d:0 "最後のリンドウ＝ルピーン家のヴィヒマン伯爵の死により、ルピーンの土地はブランデンブルクの[Root.Monarch.Dynasty.GetName]の支配へと戻った。この地域は、広大なブランデンブルクの一部とみなされていたにもかかわらず、伯爵は帝国の直接の臣下であった。ルピーンの土地の多くは何年にもわたって抵当に入っていたが、最後の君主が絶えたことで、ノイルピーンの町とその周辺の多くの土地を直接没収できるようになった。"
+ flavor_brapru.38.d:0 "リンドウ＝ルピーン家系最後のヴィヒマン伯爵の死により、ルピーンの土地はブランデンブルクの[Root.Monarch.Dynasty.GetName]の支配へと戻った。この地域は、広大なブランデンブルクの一部とみなされていたにもかかわらず、伯爵は帝国の直接の臣下であった。ルピーンの土地の多くは何年にもわたって抵当に入っていたが、最後の君主が絶えたことで、ノイルピーンの町とその周辺の多くの土地を直接没収できるようになった。"
  flavor_brapru.38.a:0 "我々のこの州の支配権は今や固まった！"
  flavor_brapru.39.t:0 "ヨハネス・アグリコラ"
  flavor_brapru.39.d:0 "もともとヨハネス・アグリコラはマルティン・ルターの神学的盟友の一人であったが、偉大な改革者と苦い仲違いをした。モーセの律法がキリスト教徒に適用されるかどうかのアグリコラの立場は、ルターの正反対であり、改革者は現在、活動や布教のための新しい拠点を探している。福音書のみをキリスト教の行動の源泉とすることを主張し、カトリックとの和解に好意的であったため、アグリコラはより急進的な改革派からも敬遠されるようになった。彼の神学的見解は、新しく設立されたブランデンブルク教会のための優れた監督となるだけでなく、[Root.Monarch.Dynasty.GetName]の宮廷における良き説教者となるだろう。"
@@ -4773,7 +4773,7 @@
  flavor_wal.EVTDESC2E:1 "[Root.Monarch.GetName]は戦場を見渡すことを一旦止め、平静ながらも落ち着かない様子で、燃える都市[TUR.Capital.GetName]をほんの一瞬見つめました。\n[Root.Monarch.GetHerHisCap]の元に集まった従者達は、来るべき判断のため、彼らの槍と腹の準備を整えています。オスマン王室への残忍な串刺し刑が始まります。\n[TUR.Heir.GetTitle][TUR.Heir.GetName]は恐ろしい展示物を見ることを強いられたため、顔をゆがめました。次は自分の番だという現実が分かり始めたため、その目は恐怖で満たされています。"
  flavor_wal.EVTDESC2G:1 "集まった従者達は、来るべき判断のため、彼らの槍と腹の準備を整えています。オスマン王室への残忍な串刺し刑が始まります。兵士は、殴られボロボロである[TUR.Monarch.GetTitle][TUR.Monarch.GetName]の体を、地面でうなだれている姿勢から持ち上げ、体を支え、直立させました。かつて威厳のあった[TUR.Monarch.GetTitle]は、杭が心臓に突き刺さり、背中から出てくる際に、末期のゾッとするような金切り声を上げました。"
  dnz_decision_available_tooltip:1 "決断§Y「プロイセン同盟の縮小」§!が使用可能になりました。\n階級特権§Y「プロイセン同盟への譲歩」§!が使用可能になりました。"
- flavor_klm.d.1:1 "カルムイクの部族民が野営地に向かって馬を走らせるにつれ、蹄の音が雷鳴の如く平野を渡って鳴り響きます。ハーンは小さくとも丈夫な馬から優雅に降り、我々の使節を迎えるために武器を武器を差し出します。彼は、家畜を放牧し、慣習に従って生活するための新しい土地を探し求め、全部族をはるか東方から導いてきたのだと説明しています。\nハーンは、クマ川の草原に彼の部族を定着させるのに最適な場所を見つけたと信じています。クマ川の支配者として、彼は自身の国民がこの土地を独立して支配できるようにするために、戦士を[Root.GetName]に出征しています。彼が話すにつれ、彼の表情は固くなり、ハーンは厳かに前へと進み出ます。彼は会談から離れる前に警告を加えます。彼は今や部族を引き返させることはできません。彼の言葉を受け入れなければ、我々は彼と戦闘で向き合わなければなりません。"
+ flavor_klm.d.1:1 "雷鳴の如く蹄の音を草原に鳴り響かせ、カルムイクの部族民が野営地に向かって馬を走らています。ハーンは小柄ながらも頑丈な馬から優雅に降り、両手を広げて我々の使節を迎え入れました。彼は、家畜を放牧し、彼らの慣習に従って生活するための新しい土地を探し求め、はるか東方から全部族を率いてきたのだと説明しています。\nハーンは、彼の部族を移住させるのに最適な場所をクマ川の草原に見つけたと信じています。クマ川の統治者として、もし我々が彼の民族にこの土地を自治的に支配することを許可すれば、戦士の兵役を[Root.GetName]に提供するとしています。彼が話すにつれ、彼の表情は固くなり、ハーンは厳かに前へと進み出ます。彼は会談から退席する前に警告を加えます。今となっては部族を引き返させることはできない。彼の言葉を受け入れなければ、我々は戦闘で対峙しなければなりません。"
  granada_civil_war.1.t:0 "僭称者が蜂起"
  granada_civil_war.1.desc:0 "ユースフはナスル朝ムハンマド9世の甥である。かつては誰しもに愛されたが、兵を起こし、自らアミールとなろうとしている。\n\nどのようにして一族の間でこのような対立に至ったのか我々の理解の範疇を超えているが、この大胆不敵な行動に対してそれ相応の苛烈な態度で臨まなければならない。ユースフを吊らねばならない。"
  granada_civil_war.1.a:0 "戦争だ！"
