--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1311,7 +1311,7 @@
  EVTOPTA5051:0 "騒ぎを起こす者を処刑しろ。"
  EVTOPTB5051:0 "税を廃止する。"
  EVTNAME5052:0 "農民たちの不幸"
- EVTDESC5052:1 "税金、地主の残虐行為、収用、農奴と税関政策に対する紛争と抗議はかなり頻繁になっている。すぐに問題を解決できない場合、我が国の安定にとって、結果は悲惨なものになる可能性がある。"
+ EVTDESC5052:1 "重税、地主の虐待、土地没収、農奴、税関政策をめぐる紛争や抗議がかなり頻発している。すぐに問題を解決できない場合、我が国の安定にとって、結果は悲惨なものになる可能性がある。"
  EVTOPTA5052:0 "我々は自ら望むように支配する！"
  EVTOPTB5052:0 "状況の改善を試みる。"
  EVTNAME5053:0 "商人たちの不幸"
@@ -1413,7 +1413,7 @@
  EVTOPTA5083:1 "彼を雇用しよう。"
  EVTOPTB5083:0 "申し出を断る。"
  EVTNAME5084:0 "外国の訓練教官を雇用可能"
- EVTDESC5084:1 "[drill_instructor_country.GetAdjective]の訓練教官は、銃器をさらに効果的に使用するために部隊を訓練する技術に熟練している。それらの方法は秘密とは程遠いものだ。実際、起業家的な[drill_instructor_country.GetAdjective]の熟練者は、ヨーロッパ中の支配者に知識を提供することで、自身の生計を立てている。そんな訓練教官の一人である[Root.dutch_drillmaster.GetName]が彼の奉仕を提案するため我々の宮廷に到着した。"
+ EVTDESC5084:1 "[drill_instructor_country.GetAdjective]の訓練教官は、銃器をさらに効果的に使用するために部隊を訓練する技術の熟練者になっている。ところが、彼らの方法は秘密とは程遠いものだ。実際、起業家的な[drill_instructor_country.GetAdjective]の熟練者は、ヨーロッパ中の支配者に知識を提供することで生計を立てている。そんな訓練教官の一人である[Root.dutch_drillmaster.GetName]が我々の宮廷に到着し、奉仕を提案している。"
  EVTOPTA5084:0 "彼を雇用しよう。"
  EVTOPTB5084:0 "申し出を断る。"
  EVTNAME5085:0 "大宮殿の建設"
