--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -302,7 +302,7 @@
  JAP_emperor_of_china_title:0 "帝国の天命"
  JAP_emperor_of_china_desc:0 "我々はかつて中国から「小人」と呼ばれていたが、今では我々の手により、中国が小さくなっている！天子は全く平等ではない。他全ての支配者に対し、天皇が彼らより上位にあるということを強く主張せねばならない。"
  JAP_secure_the_pacific_title:0 "太平洋の確保"
- JAP_secure_the_pacific_desc:0 "大きくなるにつれ、防衛の必要性も高まる。拡大の機会を求めて西へと目を向ける一方で、東の広大な太平洋側も警戒せねばならない。その方向からどんな脅威が来るか、一体誰が知っているというのだ？領有権を理由に他国が東から攻撃してこないよう、我々の力を太平洋の島々に誇示するのは賢明な手段といえよう。"
+ JAP_secure_the_pacific_desc:0 "我々の活動範囲が広まるにつれ、防衛の必要性も高まっている。拡大の機会を求めて西方へと目を向ける一方で、東方の広大な太平洋側も警戒せねばならない。その方向からどんな脅威が来るか、一体誰が知っているというのだ？領有権を理由に他国が東から攻撃してこないよう、我々の力を太平洋の島々に誇示するのは賢明なことといえよう。"
  JAP_regulate_the_social_order_title:0 "社会階級の管理"
  JAP_regulate_the_social_order_desc:0 "再び混乱の時代を迎えないようにするため、社会の中での自身の立場を、誰もが分かるようにせねばならない。侍は侍のまま、商人は商人のまま、農民は農民のままでなければならず、いかなる真逆でおかしな考えを持つ者など誰もいない。"
  JAP_dominate_the_market_title:0 "市場の支配"
@@ -404,7 +404,7 @@
  kor_foothold_in_japan_title:0 "日本での橋頭堡"
  kor_foothold_in_japan_desc:1 "強力な日本の将軍が日本列島からやってきて勢力拡大を図るのではないかと多くの者が懸念しているーそうなれば、朝鮮は間違いなく第一目標となるだろう。この運命を避けるなら、この図式を変え、日本側を守勢に立たせねばならない。"
  kor_defeat_shogun_title:0 "将軍の打倒"
- kor_defeat_shogun_desc:0 "日本の豊かな土地は、収奪の頃合いを迎えている。日本の帝都である京都を占領できれば、我が征服へのさらなる抵抗はすぐに消え去る。"
+ kor_defeat_shogun_desc:0 "日本の豊かな土地は、収奪の頃合いを迎えている。日本の都である京を占領できれば、我が征服へのさらなる抵抗はすぐに消え去る。"
  kor_turtle_ships_title:0 "亀甲船の出帆"
  kor_turtle_ships_desc:1 "我々の造船技師は新型の重装船に関する計画を立てた。発射された弾から乗組員を守るための側面部や屋根を覆う固い外板から着想を得て、彼らはそれを亀船または「亀甲船」と呼んでいる。この新しい艦船の恐るべき外観とその防御力は、朝鮮が守り切るために必要となる制海権を決して失わないことを保証するだろう！"
  kor_turtle_fleets:0 "亀甲船"
