--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -3410,7 +3410,7 @@
  vegesack:0 "フェーゲザック港"
  vegesack_desc:0 "ヴェーザー川は沈泥で塞がれており、船は我々の国家の港に到達するのにますます苦労している。海上交易がより容易に我々の都市に到達できるように、フェーゲザックのさらに北側に人工港を建設する可能性が示唆されている。"
  bremish_walls:0 "ブレーメンの壁"
- bremish_walls_desc:0 "ブレーメンは、北ドイツで戦われたほぼすべての戦争で包囲されてきた。ブレーメンの壁、門、堀は、必ずしも侵略者を後退させるのに十分ではなかったものの、何世紀にもわたって我々によく役立ってきた。砦や戦場における他の新しい発明を用いてこれらの要塞を拡大しようとすることで、それらは今後何百年にもわたって役目を果たし続けるだろう。"
+ bremish_walls_desc:0 "ブレーメンは、北ドイツで起こったほぼすべての戦争で包囲されてきた。ブレーメン市の壁、門、堀は、必ずしも侵略者を後退させるのに十分ではなかったものの、何世紀にもわたってよく役立ってきた。砦や戦場における他の新しい発明を用いて、要塞を拡大しよう。そうすれば、今後何百年にもわたって役目を果たし続けるだろう。"
  foundation_of_bremerhaven:0 "ブレーマーハーフェンの創建"
  foundation_of_bremerhaven_desc:0 "ブレーメンの北にあるフェーゲザックの港は、船積みと造船の新たな拠点となる機会がますます増している。ここでヨハン・ランゲのような革新的な事業家は、近代的な新しい造船技術を適用し始めており、蒸気によって駆動する船の話さえも聞かれるようになった。しかし、ブレーメンの海洋開発をさらに進めるためには、海への交通が完全に妨げられないよう、川の河口にまったく新しい都市を確立する必要がある。"
  HES_ideas:0 "ヘッセンのアイデア"
