--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -1920,7 +1920,7 @@
  peasants_conquest_of_bread_title:0 "パンの略取"
  peasants_conquest_of_bread_desc:0 "他国では、畑や工場で働く高貴な労働者は、その労苦の代償としてパンを要求すれば、銃剣とぶどう弾に見舞われる羽目になるだろう。[Root.GetName]では、男性も、女性も、子供も、空腹で飢えて死ぬことは決してない。皆にパンを配ろう！"
  peasants_means_of_production_title:0 "生産手段"
- peasants_means_of_production_desc:0 "物質的な生産手段を保持している者は、精神的な生産手段も支配しているため、支配階級の考えは貧しい人々の精神を支配下に置く。我々は、物質的な生産が少数のエリートによってではなく、大衆によって支配されることを保証する必要がある。"
+ peasants_means_of_production_desc:0 "物質的な生産手段を有する者は、精神的な生産手段も支配しているため、支配階級の考えが貧しい人々の精神を支配することになる。我々は、物質的な生産が少数のエリートによってではなく、大衆によって支配されるようにしなければならない。"
  peasants_bremen_title:0 "敬虔なる同盟"
  peasants_bremen_desc:0 "我が国民の安全は長い間、ブレーメンの大司教領により政治的に守られてきた。我々は日和見的な封建君主の慈悲に委ねられることのないよう、教会の支援を求め続けなければならない。"
  peasants_north_germany_title:0 "封建制への抵抗"
