--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -3,7 +3,7 @@
  build_army_mission_title:0 "扶養限界まで軍拡"
  build_army_mission_desc:0 "発展を続ける国家には、適切な規模の軍隊を維持する必要がある。我々の軍隊を拡大することで、海外における政治的利益をさらに高め、国内経済を刺激することができる。"
  expand_country_mission_title:0 "[Root.GetName]の拡大"
- expand_country_mission_desc:0 "我々は、我々の祖先たちによって強く成功が可能な国家を与えられた。我々の遺産を拡大し、[Root.GetName]を成長させて、我々がより強く、より影響力のある国家を子供たちに残す時が来た。"
+ expand_country_mission_desc:0 "我々は先人たちによって強く存続可能な国家を与えられている。今こそ、自国の遺産をさらに発展させ、[Root.GetName]を成長させることで、より強く、より影響力のある国家を子供たちに残す時だ。"
  conquer_states_title:0 "新たな領土の征服"
  conquer_states_desc:0 "我々が拡大するにつれ、我々が征服した新しい土地を真に統治機構へと統合できるようにする必要がある。征服の後、征服された領土に真の[Root.GetAdjective]の支配を確立するのは困難な作業である。"
  assemble_an_army_title:0 "軍の構築"
@@ -1212,7 +1212,7 @@
  mug_upper_burma_campaign_title:0 "上ビルマ攻略"
  mug_upper_burma_campaign_desc:0 "アラカン山脈の向こうには鉱物や宝石が豊富な土地がある。上ビルマは人を寄せ付けない地域でもあり、好戦的なシャン族の本拠地で、何世紀にも渡って戦っている。\nしかし、ルビーの源泉のようなものは、地球上のどの他の場所より多いので、決して我慢はできない。"
  mug_open_up_china_title:0 "中国の開放"
- mug_open_up_china_desc:0 "我々の最近の拡大は中華帝国の国境に立たせた。中国は常に遠方の巨人であった。インド亜大陸全体をまとめたのと同じくらい富と人口をもつ国であるが、インドはしばしばバラバラになったが、中国は安定し、中央集権化した。\n中国人は我々の条件で我々と関わり合いたがらないようだが、強力なムガル帝国の[Root.Monarch.GetTitle]による指示命令を彼らにしてはならない。教えよう、この古い帝国に我々の新しく築かれた国家が何を成し遂げる事が出来るかを…"
+ mug_open_up_china_desc:0 "最近の拡張によって、我々は中華帝国の国境に到達した。中国は常に遠方の巨人であった。インド亜大陸全体をまとめたのと同じくらい富と人口をもつ国であるが、インドはしばしば分裂していたのに対して、中国は安定し、中央集権的であった。\n中国人は我々の条件で我々と関わり合いたがらないようだが、強力なムガル帝国の[Root.Monarch.GetTitle]による指示命令を彼らにしてはならない。教えよう、この古い帝国に我々の新しく築かれた国家が何を成し遂げる事が出来るかを…"
  mug_general_land_assessement_title:0 "一般的土地評価"
  mug_general_land_assessement_desc:0 "行政の浸透は常にどんなインド帝国においても大きな問題であった。ヒンドゥスターンの膨大な富への課税は、そうやって軍事力や権力を持つ事の問題だけではない。国境内に存在する歳入の源泉が何かを測定、評価、マッピングする事も大いに大事な事だ。\n我が支配下の全領域の一般的な土地評価はとてつもなく我々に恩恵を与えそうだ、たとえそれが大事業でもあろうが。"
  mug_sind_campaign_title:0 "シンド攻略"
@@ -1401,7 +1401,7 @@
  order_of_the_dragon_desc:0 "トルコ人をキリスト世界の境界から撃退するために設立されたドラゴン騎士団は深刻な衰退に陥っている。ヴァルナでの壊滅的な敗北は、多くの反オスマン連合の人々の信仰を鎮めてしまった。我々はこれらの同盟を回復し、トルコ人に対して団結して立ち向かわねばならない。"
  rmn_impale_the_sultan_title:0 "スルタンを突き刺せ"
  rmn_impale_the_sultan_desc:0 "トルコのスルタンは大群の兵士と城壁のある砦の背後に隠れているので、安全だと信じている。我々は神の裁きから隠れることのできる者は誰もいないことを彼に示す。彼は自分の命を持ってキリスト世界に対する罪を償うだろう！"
- romania_turk_tt:1 "§Y[Root.Country.GetName]§!は、§Yオスマン§!が領有するバルカンとカルパティア全域に対する請求権を獲得します"
+ romania_turk_tt:1 "§Y[Root.Country.GetName]§!は、§Yオスマン§!が領有するバルカン及びカルパティア全域に対する請求権を獲得します。"
  rmn_drive_out_the_turks_title:0 "トルコ人の追放"
  rmn_drive_out_the_turks_desc:0 "ギリシャとブルガリアの人々を抑圧者から解放せねばならない。ついにトルコ人の侵略者をボスポラス海峡の向こう側に追い返す時が来た！"
  rmn_heir_of_rome_title:0 "ローマの継承者"
@@ -1998,7 +1998,7 @@
  arl_build_army_mission_title:1 "王国軍"
  arl_build_army_mission_desc:0 "成長する国家であれば、それなりの規模の軍隊を維持しなければならない。軍備を拡大することで、海外での政治的利益を高め、国内経済の活性化もできる。"
  arl_expand_country_mission_title:1 "[Root.GetName]の保護"
- arl_expand_country_mission_desc:0 "先人たちより強く存続能力のある国を与えられた。今こそ、自国の遺産をさらに発展させ、[Root.GetName]を成長させることで、より強く、より影響力のある国家を子供たちに残す時だ。"
+ arl_expand_country_mission_desc:0 "我々は先人たちによって強く存続可能な国家を与えられている。今こそ、自国の遺産をさらに発展させ、[Root.GetName]を成長させることで、より強く、より影響力のある国家を子供たちに残す時だ。"
  arl_conquer_states_title:1 "王領の拡大"
  arl_conquer_states_desc:0 "我々が拡大するにつれて、征服した新しい土地を行政機構に真に統合できるようにしなければならない。征服の後には、征服地に対する真の[Root.GetAdjective]統治を確立するという重労働が待っている。"
  arl_unite_home_region_title:1 "ペルシアの統合"
