Save/Update files [ci skip]

--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -577,11 +577,6 @@
  cb_war_on_empire_desc:0 "この古めかしい機関を根絶やしにせねば。"
  war_empire_cb_wgt:0 "対帝国戦争"
  war_empire_cb_wgt_desc:0 "この古めかしい機関を根絶やしにせねば。"
- FU7:0 "アンジュー・ジェノヴァ"
- FU7_ADJ:0 "アンジュー・ジェノヴァ"
- FU7_ideas:0 "アンジュー・ジェノヴァのアイデア"
- FU7_ideas_start:0 "アンジュー・ジェノヴァの伝統"
- FU7_ideas_bonus:0 "アンジュー・ジェノヴァの宿願"
  lessons_hundred_years_war:0 "百年戦争の教訓"
  lessons_hundred_years_war_desc:0 "イングランド王室との絶え間なき戦いの中で、自国の軍人は戦争に対して驚くほどの経験を積んできた。この知識を活かすことで、自身の影響力と領土をさらに拡大することができるだろう。"
  europes_first_standing_army:0 "ヨーロッパ初の常備軍"
@@ -6582,7 +6577,7 @@
  pru_if_emperor_tt:1 "\n最後に、もし自身が現§Y皇帝§!である場合、開発度が§G25§!以上である非HRE州を征服するごとに、帝国の権威を§G1§!獲得します。"
  pru_spread_dev_tt:0 "\n§Y東プロイセン§!地域および§Y西プロイセン§!地域の全州で開発度をランダムで§G1§!獲得します。\n"
  pru_golden_era_20_unis_tt:0 "\n大学を§Y25§!以上持ってこのミッションを完了した場合、支配者の存命中、自身の黄金時代を消費することなく§Y黄金時代§!を経験することができます"
- until_its_sieged_desc:0 "ベルリン州を敵軍が包囲もしくは征服するまで"
+ until_its_sieged_desc:0 "ベルリン州を敵軍が包囲占領もしくは征服するまで"
  estate_nobles_consolidated_noble_contracts:0 "貴族との契約強化"
  estate_nobles_consolidated_noble_contracts_desc:0 "貴族は戦時中において自国にとって不可欠な存在である。国境を前進させることに自軍を注力させたいならば、内地の平和を維持するために領内の有力な一族と提携せねばならない。"
  unlock_privilege_estate_nobles_consolidated_noble_contracts_tt:0 "\n貴族特権「§Y貴族との契約強化§!」を解禁"
@@ -6750,3 +6745,8 @@
  flavor_mos.2.c:0 "残念だ…。"
  tur_defeat_the_mamluks_tt:0 "§Y[Root.GetName]§!は、§Yバーレーン§!、§Yタブーク§!、§Yネフド砂漠§!、§Yアル＝カーシム§!、§Yメディナ§!および§Yメッカ§!地域に恒久的な請求権を獲得します。"
  commercial_enterprise_no_overlord_dow:0 "営利企業従属国に宣戦を布告することはできません。"
+ EU7:0 "Angevin Government of Genoa"
+ EU7_ADJ:0 "Angevin-Genoese"
+ EU7_ideas:0 "Angevin-Genoese Ideas"
+ EU7_ideas_start:0 "Angevin-Genoese Traditions"
+ EU7_ideas_bonus:0 "Angevin-Genoese Ambition"
