--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -32,8 +32,8 @@
  DIP_EFFECT:0 "$WHO$が$VALUE$£dip£$DIRECTION$\n"
  MIL_EFFECT:0 "$WHO$が$VALUE$£mil£$DIRECTION$\n"
  FRIENDLY_NEARBY_PROVINCE_STARTS:0 "隣接する友好州"
- NOT_HAS_INSTITUTION_IN_COUNTRY:0 "$COUNTRY$が$WHICH|Y$を受容していない\n"
- HAS_INSTITUTION_IN_COUNTRY:0 "$COUNTRY$が$WHICH|Y$を受容している\n"
+ NOT_HAS_INSTITUTION_IN_COUNTRY:1 "§Y$COUNTRY$§! has NOT embraced $WHICH|Y$\n"
+ HAS_INSTITUTION_IN_COUNTRY:1 "§Y$COUNTRY$§! has embraced $WHICH|Y$\n"
  NOT_HAS_INSTITUTION_IN_PROV:1 "$WHICH|Y$が存在しない\n"
  HAS_INSTITUTION_IN_PROV:1 "$WHICH|Y$が存在する\n"
  INSTITUTION_LOWER_IN_PROV:0 "$WHICH|Y$への支援が$VAL|Y$未満である。\n"
