--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -285,7 +285,7 @@
  innovativeness_events.6.a:0 "彼らを支援するべきだ。"
  innovativeness_events.6.b:0 "時間の無駄だ！"
  innovativeness_events.7.t:0 "[university_province.GetName]大学"
- innovativeness_events.7.d:0 "[university_province.GetName]の大学は、その機構を近代化しようと熱望する新たな常任の教師と学生を集めている。彼らは、新しい大学を開設するための資金提供を求めており、そこでは、より実験的な見通しと、彼らが世界への独断的な取り組みがより少ないと主張するものと共に、「新しい科学」と呼ばれるものをさらに発展させることができる。\n当然、既存の学派内には、これらの改革者となることへの抵抗がある。彼らは、新しいアイデアが必ずしも優れたアイデアではないため、資金が既存の機構を支えるために費やされる可能性が高いと主張している。"
+ innovativeness_events.7.d:0 "[university_province.GetName]の大学は、その研究機関を近代化しようと熱望する新たな常任の教師と学生を集めている。彼らは新しい大学を開設するための資金提供を求めており、そこでは、より実験的な見通しと、世界に対する独断的な姿勢を抑えた、「新しい科学」と彼らが呼ぶものをさらに発展させることができる。\n当然、既存のアカデミー内には、こうした改革を目指す者に対する抵抗感もある。新しいアイデアが必ずしも優れたアイデアであるとは限らないのだから、既存の研究機関を支援するために資金を費やした方がいいと彼らは主張している。"
  innovativeness_events.7.a:0 "大学の拡大？良いアイデアに思えるな。"
  innovativeness_events.7.b:0 "保守派の意見に耳を傾けよう。"
  innovativeness_events.8.t:0 "非国教会派の学校"
