--- a/source/localisation/winds_of_change_music_l_english.yml
+++ b/source/localisation/winds_of_change_music_l_english.yml
@@ -1,17 +1,17 @@
 ﻿l_english:
- CHANNEL_music_woc_preorder: "Winds of Change Pre Order Bonus"
- atlantic_navigation: "Atlantic Navigation"
- hanseatic_trade: "Hanseatic Trade"
- silk_road: "Silk Road"
- CHANNEL_music_nativeamerica: "America´s Civilizations Music"
- aztec_theme: "People from Aztlan"
- inca_theme: "Tawantinsuyu"
- mayan_theme: "Kaqchikel Kingdom"
- CHANNEL_music_centralasia: "Central Asia Music"
- hordes_centralasian: "Batu Khan"
- mughal_indian_persian: "Emperor Akba"
- oman_arabic: "Rise of Saif bin Sultan"
- CHANNEL_music_centraleurope: "Central Europe Music"
- austria_theme: "House of Habsburg"
- hungary_theme: "Celebration of Buda"
- netherlands_theme: "Dutch Golden Age"
+ CHANNEL_music_woc_preorder:0 "Winds of Change Pre Order Bonus"
+ atlantic_navigation:0 "Atlantic Navigation"
+ hanseatic_trade:0 "Hanseatic Trade"
+ silk_road:0 "Silk Road"
+ CHANNEL_music_nativeamerica:0 "America´s Civilizations Music"
+ aztec_theme:0 "People from Aztlan"
+ inca_theme:0 "Tawantinsuyu"
+ mayan_theme:0 "Kaqchikel Kingdom"
+ CHANNEL_music_centralasia:0 "Central Asia Music"
+ hordes_centralasian:0 "Batu Khan"
+ mughal_indian_persian:0 "Emperor Akbar"
+ oman_arabic:0 "Rise of Saif bin Sultan"
+ CHANNEL_music_centraleurope:0 "Central Europe Music"
+ austria_theme:0 "House of Habsburg"
+ hungary_theme:0 "Celebration of Buda"
+ netherlands_theme:0 "Dutch Golden Age"
