--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -6592,7 +6592,7 @@
  pru_adding_provinces_to_trade_c_merc_prod_tt:1 "\n自国の州を§Y交易会社§!に追加すると、追加州で開発度を§G1§! £dip£獲得し、さらに重商主義を§G1§!獲得します。"
  pru_dev_saxon_lands_tt:1 "\n§Yザクセン§!文化もしくは§Yニーダーザクセン§!文化の州を開発すると、その州に§Y20§!年間、以下の恩恵を獲得します：\n州の分離主義の年数：§G-3§!\n州の自治度削減：§G-5%§!\n州の繁栄成長：§G+1§!\n"
  pru_unifying_germany_bb_gate_magnificent_tier_tt:1 "\n§Yブランデンブルク門§!の「§Y最高§!」レベルはさらに以下の報酬を獲得します：\n絶対主義の効果最大値：§G+10%§!"
- pru_spread_5_dev_tt:1 "自国もしくは従属国で領有する州で、以下の地域にランダムで開発度§G5§!の£adm£・£dip£・£mil£が分配されます：\n - §Yブラウンシュヴァイク§!\n - §Yノルトヴェストファーレン§!\n - §Yズュートヴェストファーレン§!"
+ pru_spread_5_dev_tt:1 "自国もしくは従属国が領有する州で、以下の地域にランダムで開発度§G5§!の£adm£・£dip£・£mil£が分配されます：\n - §Yブラウンシュヴァイク§!\n - §Yノルトヴェストファーレン§!\n - §Yズュートヴェストファーレン§!"
  enable_this_ability_tt:0 "報酬としてこの能力が利用可能になります"
  pru_access_normal_militarization_tt:0 "\n「§Y初期のプロイセンの軍事化§!」の仕組みが「§Yプロイセンの軍事化§!」にアップグレードされ、能力が向上する"
  pru_access_advanced_militarization_tt:0 "\n「§Yプロイセンの軍事化§!」の仕組みが「§Y完全なプロイセンの軍事化§!」にアップグレードされ、能力が向上し新たな§Y政府の相互作用§!が解禁される"
@@ -6745,8 +6745,8 @@
  flavor_mos.2.c:0 "残念だ…。"
  tur_defeat_the_mamluks_tt:0 "§Y[Root.GetName]§!は、§Yバーレーン§!、§Yタブーク§!、§Yネフド砂漠§!、§Yアル＝カーシム§!、§Yメディナ§!および§Yメッカ§!地域に恒久的な請求権を獲得します。"
  commercial_enterprise_no_overlord_dow:0 "営利企業従属国に宣戦を布告することはできません。"
- EU7:0 "Angevin Government of Genoa"
- EU7_ADJ:0 "Angevin-Genoese"
- EU7_ideas:0 "Angevin-Genoese Ideas"
- EU7_ideas_start:0 "Angevin-Genoese Traditions"
- EU7_ideas_bonus:0 "Angevin-Genoese Ambition"
+ EU7:0 "アンジュー・ジェノヴァ政府"
+ EU7_ADJ:0 "アンジュー・ジェノヴァ"
+ EU7_ideas:0 "アンジュー・ジェノヴァのアイデア"
+ EU7_ideas_start:0 "アンジュー・ジェノヴァの伝統"
+ EU7_ideas_bonus:0 "アンジュー・ジェノヴァの宿願"
