--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -4141,6 +4141,6 @@
  FOUR_HUNDRED:0 "400"
  unlocked_state_madrasas_reform:0 "政府改革が解禁されます。"
  unlocked_karimi_stations_reform:0 "政府改革が解禁されます。"
- HAS_CONVERTED_45_PROVINCES_TT:0 "Has converted at least §Y45§! provinces (§Y[This.GetNumConvertedProvinces]§!/§Y30§!)"
- arm_unlocked_sparapet:0 "Has unlocked '§YThe Sparapet Office§!' government reform."
- mechanic_enables_pronoias:0 "May establish §YPronoia Subjects§!."
+ HAS_CONVERTED_45_PROVINCES_TT:0 "§Y45§!州以上改宗した（§Y[This.GetNumConvertedProvinces]§!/§Y30§!）"
+ arm_unlocked_sparapet:0 "政府改革「§Y要職スパラペト§!」を解禁している。"
+ mechanic_enables_pronoias:0 "§Yプロノイア従属国§!の設立が可能です。"
