--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -1036,7 +1036,7 @@
  desc_cheated_rolls:0 "我々の地元の募兵者は、個人的利益のために召集することができる兵士の数を大幅に誇張している。"
  reassessement_provinces:0 "調査の再評価"
  desc_reassessement_provinces:0 "我々は、現地の代表者が州が召集できる兵士の数を大幅に誇張していることを知り、この国の土地と人々の価値を徹底的に調査している。人々の生活を行き来し、彼らが所有するすべてのものを分類することは、地元民の間で多くの友人を獲得する可能性は低いだろうが、将来の募集と課税の効率を高めるものである。"
- gunpowder_core:0 "エリート連隊"
+ gunpowder_core:0 "精鋭連隊"
  desc_gunpowder_core:0 "我々は、最良の装備と最も厳格な訓練を受けている、国家の直接の支配下にある連隊の小さな中核を作り上げた。適切に配備されれば、これは戦闘において我々に優位性を与えるだろうが、何より我々が今後どのように軍隊を発展させるかを知るのに役立つだろう。"
  standardized_uniforms_modifier:0 "標準化された軍服"
  desc_standardized_uniforms_modifier:0 "統制下にある全部隊の軍服と装備の標準化を開始した。職業軍の成長を促進するだけでなく、戦闘中に敵から味方を判別する能力を大きく助けるものだ。"
