Save/Update files [ci skip]

--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -228,7 +228,7 @@
  darien_scheme_desc:0 "我々の財政顧問は、これが間違っている可能性は全くないことを保証している。"
  darien_scheme_tooltip:0 "§Yパナマ§!地域において、§Y2§!つの州を自国か従属国が領有する。"
  sco_nova_scotia_title:0 "ノバスコシア"
- sco_nova_scotia_desc:0 "新世界の素朴な土地はスコットランドに多くを提供することができる。ノバスコシアと呼ばれる北部地域では、我々の探検家により適切な地域が確認されている。"
+ sco_nova_scotia_desc:0 "新世界の手付かずの土地はスコットランドに多くのものを与えてくれるだろう。我々の探検家によってノバスコシアと呼ばれる北部地域では、適切な地域が確認されている。"
  sco_nova_scotia.tooltip:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、カナダ植民地域に、完全に植民地化された州を§Y5§!州以上領有する。"
  sco_highlands_mission_title:0 "諸島の剥奪"
  sco_highlands_mission_desc:0 "諸島の領主であるマクドナルド氏族は、ハイランドの氏族たちの間で多くの影響力を持っている。最近の歴史において、すでに数回反乱を起こしており、スコットランドの支配に抵抗するために再びハイランダーを集めるのは時間の問題だ。さらに、マクドナルドとイングランド王国の間で我々の領土を分割するため、イングランドと共謀しているという噂がある。マクドナルドを島の支配者として残しておくのが非常に危険なことは明らかだ。"
