--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -1594,9 +1594,9 @@
  USA_ideas_start:0 "アメリカの伝統"
  USA_ideas_bonus:0 "アメリカの宿願"
  freedom_of_religion:0 "信教の自由"
- freedom_of_religion_desc:0 "議会は、宗教の結社を尊重する法律を作ってはならず、またはその自由な行使を禁止しなければならない…"
+ freedom_of_religion_desc:0 "議会は、国教を樹立する法律を作ってはならず、自由な宗教活動を禁止する法律を作ってはならない…"
  usa_bill_of_rights:0 "権利章典"
- usa_bill_of_rights_desc:0 "…または言論の自由や報道の自由を要約する。人々の平和的集会の権利、政府に苦情救済のために請願する権利。"
+ usa_bill_of_rights_desc:0 "議会は…言論の自由や報道の自由を制限する法律を作ってはならない。人々が平和的に集会する権利や、苦情救済のために政府に請願する権利を制限する法律を作ってはならない。"
  empire_of_liberty:0 "自由の帝国"
  empire_of_liberty_desc:1 "領内の人々は他と競争にもならない自由の対象だ。"
  lessons_of_valley_forge:0 "バレーフォージ演習"
